--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ path = "src/lib.rs"
 crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
-xaeroflux = "0.3.0-m3"
+bytemuck = "1.23.1"
+rkyv = "0.8.10"
+xaeroid = "0.4.0"
+rusted-ring = "0.5.1"
+xaeroflux = "0.8.1-m5"
 once_cell = "1.21.3"
