--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
 bytemuck = "1.23.1"
-rkyv = "0.8.10"
-xaeroid = "0.4.0"
-rusted-ring = "0.5.1"
-xaeroflux = "0.8.1-m5"
+rkyv = "0.8.11"
+xaeroid = "0.4.1"
+rusted-ring = "0.5.6"
+xaeroflux = "0.9.3-alpha"
 once_cell = "1.21.3"
+tracing = "0.1.41"
+xaeroflux-actors = "0.9.3-alpha"
+serde = { version = "1.0.219", features = ["derive"] }
