sending QUIC/P2P chat messages setup, skeleton

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ bytemuck = "1.23.1"
 rkyv = "0.8.11"
 xaeroid = "0.4.1"
 rusted-ring = "0.5.6"
-xaeroflux = "0.9.7-alpha"
+xaeroflux = "0.9.8-alpha"
 once_cell = "1.21.3"
 tracing = "0.1.41"
-xaeroflux-actors = "0.9.7-alpha"
+xaeroflux-actors = "0.9.8-alpha"
+xaeroflux-core = "0.9.8-alpha"
 serde = { version = "1.0.219", features = ["derive"] }
