--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ bytemuck = "1.23.1"
 rkyv = "0.8.11"
 xaeroid = "0.4.1"
 rusted-ring = "0.5.6"
-xaeroflux = "0.9.8-alpha"
+xaeroflux = { git = "https://github.com/block-xaero/xaeroflux.git", branch = "main" }
 once_cell = "1.21.3"
 tracing = "0.1.41"
-xaeroflux-actors = "0.9.8-alpha"
-xaeroflux-core = "0.9.8-alpha"
+xaeroflux-actors = { path = "../xaeroflux/xaeroflux-actors" }
+xaeroflux-core = { path = "../xaeroflux/xaeroflux-core" }
 serde = { version = "1.0.219", features = ["derive"] }
+hex = "0.4.3"
