--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["staticlib", "cdylib"]
 [dependencies]
 bytemuck = "1.23.1"
 rkyv = "0.8.11"
-xaeroid = "0.4.1"
+xaeroid =  { git = "https://github.com/block-xaero/xaeroID.git", branch = "main" }
 rusted-ring = "0.5.6"
 xaeroflux = { git = "https://github.com/block-xaero/xaeroflux.git", branch = "main" }
 once_cell = "1.21.3"
@@ -19,3 +19,4 @@ xaeroflux-actors = { path = "../xaeroflux/xaeroflux-actors" }
 xaeroflux-core = { path = "../xaeroflux/xaeroflux-core" }
 serde = { version = "1.0.219", features = ["derive"] }
 hex = "0.4.3"
+blake3 = "1.8.2"
