--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["staticlib", "cdylib"]
 [dependencies]
 bytemuck = "1.23.1"
 rkyv = "0.8.11"
-xaeroid =  { git = "https://github.com/block-xaero/xaeroID.git", branch = "main" }
+xaeroid =  { path = "../xaeroID" }
 rusted-ring = "0.5.6"
 xaeroflux = { git = "https://github.com/block-xaero/xaeroflux.git", branch = "main" }
 once_cell = "1.21.3"
