--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,16 @@ xaeroflux-core = { path = "../xaeroflux/xaeroflux-core" }
 serde = { version = "1.0.219", features = ["derive"] }
 hex = "0.4.3"
 blake3 = "1.8.2"
+tracing-subscriber = "0.2.25"
+rand = "0.8.5"
+
+ark-std = "0.5.0"
+ark-ff = "0.5.0"
+ark-relations = "0.5.1"
+ark-r1cs-std = "0.5.0"
+ark-groth16 = "0.5.0"
+ark-bn254 = "0.5.0"
+ark-serialize = "0.5.0"
+ark-snark = "0.5.1"
+ark-crypto-primitives = { version = "0.5.0", features = ["crh", "r1cs"] }
+
