--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,35 +1,39 @@
 [package]
-name = "cyan_backend"
+name = "cyan-backend"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+
 [lib]
-name = "cyan_backend"        # the Rust-side name of the library
-path = "src/lib.rs"
-crate-type = ["staticlib", "cdylib"]
+crate-type = ["cdylib", "staticlib", "rlib"]
+
+[[bin]]
+name = "cyan-cli"
+path = "src/bin/main.rs"
 
 [dependencies]
-bytemuck = { version = "1.23.1", features = ["derive"] }
-rkyv = "0.8.11"
-xaeroid =  { path = "../xaeroID" }
-rusted-ring = "0.5.6"
-xaeroflux = { git = "https://github.com/block-xaero/xaeroflux.git", branch = "main" }
-once_cell = "1.21.3"
-tracing = "0.1.41"
-xaeroflux-actors = { path = "../xaeroflux/xaeroflux-actors" }
-xaeroflux-core = { path = "../xaeroflux/xaeroflux-core" }
-serde = { version = "1.0.219", features = ["derive"] }
-hex = "0.4.3"
-blake3 = "1.8.2"
-tracing-subscriber = "0.2.25"
-rand = "0.8.5"
+# Existing dependencies...
+tokio = { version = "1.40", features = ["full"] }
+once_cell = "1.20"
+rusqlite = { version = "0.32", features = ["bundled"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+blake3 = "1.5"
+uuid = { version = "1.11", features = ["v4"] }
+chrono = "0.4"
+anyhow = "1.0"
+bytes = "1.7"
+futures = "0.3"
+rand = "0.8"
 
-ark-std = "0.5.0"
-ark-ff = "0.5.0"
-ark-relations = "0.5.1"
-ark-r1cs-std = "0.5.0"
-ark-groth16 = "0.5.0"
-ark-bn254 = "0.5.0"
-ark-serialize = "0.5.0"
-ark-snark = "0.5.1"
-ark-crypto-primitives = { version = "0.5.0", features = ["crh", "r1cs"] }
+# Iroh dependencies
+iroh = "0.95"
+iroh-gossip = "0.95"
+iroh-blobs = "0.97"
 
+# CLI dependencies
+clap = { version = "4.5", features = ["derive"] }
+colored = "2.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+rand_chacha = "0.9.0"
+iroh-relay = "0.95.1"
