--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 
 
 [dependencies]
-cyan-backend-integrations = "0.0.1"
+cyan-backend-integrations = {path = "../cyan-backend-integrations"}
 tokio = { version = "1.40", features = ["full"] }
 once_cell = "1.20"
 rusqlite = { version = "0.32", features = ["bundled"] }
