--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 
 
 [dependencies]
+xaeroid = { path = "../xaeroid" }
 cyan-backend-integrations = {path = "../cyan-backend-integrations"}
 tokio = { version = "1.40", features = ["full"] }
 once_cell = "1.20"
@@ -35,3 +36,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rand_chacha = "0.9.0"
 iroh-relay = "0.95.1"
 time = "0.3.44"
+hex = "0.4.3"
