--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 
 
 [dependencies]
+xaeroai = {path = "../xaeroai"}
 xaeroid = { path = "../xaeroid" }
 cyan-backend-integrations = {path = "../cyan-backend-integrations"}
 tokio = { version = "1.40", features = ["full"] }
 once_cell = "1.20"
-rusqlite = { version = "0.32", features = ["bundled"] }
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 blake3 = "1.5"
@@ -37,3 +38,4 @@ rand_chacha = "0.9.0"
 iroh-relay = "0.95.1"
 time = "0.3.44"
 hex = "0.4.3"
+base64 = "0.22.1"
