cyan-sql agent added, this allows arbitrary sql runs via cyan-sql agent

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,24 @@
 # .cargo/config.toml
+# Merged: existing rustflags + Apple clang forcing for RustRover compatibility
+
+# =============================================================================
+# Force Apple System Clang (avoids Homebrew LLVM ABI conflicts)
+# =============================================================================
+[env]
+CC = "/usr/bin/clang"
+CXX = "/usr/bin/clang++"
+AR = "/usr/bin/ar"
+MACOSX_DEPLOYMENT_TARGET = "14.0"
+IPHONEOS_DEPLOYMENT_TARGET = "17.0"
+
+# =============================================================================
+# Target-specific flags
+# =============================================================================
 
 [target.aarch64-apple-darwin]
 rustflags = [
     "-C", "link-arg=-lc++",
+    "-C", "link-arg=-mmacosx-version-min=14.0",
 ]
 
 [target.aarch64-apple-ios]
@@ -10,6 +26,7 @@ rustflags = [
     "-C", "link-arg=-lc++",
     "-C", "link-arg=-L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/17/lib/darwin",
     "-C", "link-arg=-lclang_rt.ios",
+    "-C", "link-arg=-miphoneos-version-min=17.0",
 ]
 
 [target.aarch64-apple-ios-sim]
@@ -17,6 +34,7 @@ rustflags = [
     "-C", "link-arg=-lc++",
     "-C", "link-arg=-L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/17/lib/darwin",
     "-C", "link-arg=-lclang_rt.iossim",
+    "-C", "link-arg=-miphoneos-version-min=17.0",
 ]
 
 [target.x86_64-apple-ios]
@@ -25,3 +43,11 @@ rustflags = [
     "-C", "link-arg=-L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/17/lib/darwin",
     "-C", "link-arg=-lclang_rt.iossim",
 ]
+
+# =============================================================================
+# Aliases for quick builds
+# =============================================================================
+[alias]
+xc = "build --release --target aarch64-apple-darwin"
+ios = "build --release --target aarch64-apple-ios"
+sim = "build --release --target aarch64-apple-ios-sim"
