--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,22 @@ edition = "2024"
 [lib]
 crate-type = ["cdylib", "staticlib", "rlib"]
 
+# ═══════════════════════════════════════════════════════════════════════════
+# TEST BINARIES
+# ═══════════════════════════════════════════════════════════════════════════
+
+[[bin]]
+name = "network_test"
+path = "tests/network_actor_test.rs"
+
+[[bin]]
+name = "snapshot_test"
+path = "tests/snapshot_protocol_test.rs"
 
 [dependencies]
-xaeroai = {path = "../xaeroai"}
+xaeroai = { path = "../xaeroai" }
 xaeroid = { path = "../xaeroid" }
-cyan-backend-integrations = {path = "../cyan-backend-integrations"}
+cyan-backend-integrations = { path = "../cyan-backend-integrations" }
 tokio = { version = "1.40", features = ["full"] }
 once_cell = "1.20"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
@@ -22,10 +33,13 @@ chrono = "0.4"
 anyhow = "1.0"
 bytes = "1.7"
 futures = "0.3"
+futures-lite = "2.6.1"
 rand = "0.8"
+dirs = "5.0.1"
+tempfile = "3"
 
 # Iroh dependencies
-iroh = "0.95"
+iroh = { version = "0.95", features = ["discovery-local-network"] }
 iroh-gossip = "0.95"
 iroh-blobs = "0.97"
 
